Issue #9 Make all jobs set principals for DB edits
Use the new DB function to initialise each job to propagate the
technical user's principals down to the DB handlers.

Prevent the user and user device deletion from removing technical users

Make the CA consistency check transfer food items before deleting so it
actually works